# aichatbot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  slack.yml
src/: __init__.py  routes.py
src/app/: __init__.py  routes.py
src/app/templates/: base.html  response_view.html
src/templates/: base.html  history.html  response_view.html
