[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Simple AI Chatbot interface"
requires-python = ">=3.13"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "dotenv>=0.9.9",
    "google-genai>=1.49.0",
    "markdown>=3.10",
]

[dependency-groups]
lint = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pyrefly>=0.40.1",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]
